tests/parser/syntax-errors/token-not-found/expected_colon_if_case_if_case.choc
# RUN: choco-opt "%s" | filecheck "%s"

def foo():
    if True:
        if not False
            pass

# CHECK:      SyntaxError (line 5, column 21): token of kind TokenKind.COLON not found.
# CHECK-NEXT: >>>        if not False
# CHECK-NEXT: >>>--------------------^
